--- a/style.css
+++ b/style.css
@@ -14,4 +14,129 @@ body{
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(/images/Netflix-Background.jpg);
     background-size: cover;
     background-position: center;
+    position: relative;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 170px;
+    height: 85px;
+}
+.logo{
+    width: 150px;
+    cursor: pointer;
+}
+.nav-second{
+    display: flex;
+}
+.nav-lang-b{
+    display: flex;
+    border: 1px solid white;
+    margin-right: 20px;
+    width: 125px;
+    border-radius: 3px;
+}
+.nav-lang-b i{
+    font-size: 16px;
+    padding-top: 8px;
+    padding-left: 12px;
+}
+.nav-lang-b select{
+    width:80px;
+    margin-left: 6px;
+    font-size: 15px;
+    background-color: transparent;
+    color: white;
+    border: none;
+}
+.nav-lang-b select option{
+    color: black;
+}
+.signin{
+    border: 0;
+    width: 80px;
+    padding: 4px 16px;
+    font-size: 14px;
+    border-radius: 3px;
+    height: 32px;
+    background-color: #e50914;
+    color: #ffffff;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+/* hero section  */
+
+.hero{
+    height: 234px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.hero h1{
+    font-size: 48px;
+    margin-top: 250px;
+    font-weight: 700;
+}
+.hero p{
+    font-size: 24px;
+    margin-top: 16px;
+}
+.hero h3{
+    font-size: 20px;
+    margin-top: 16px;
+}
+.hero-email{
+    margin-top: 20px;
+    display: flex;
+}
+.hero-email input{
+    border-radius: 8px;
+    background: rgba(0, 0, 0, 0.5);
+    border: 1px solid white;
+    color: white;
+    width: 330px;
+    font-size: 18px;
+    font-weight: 400;
+}
+.hero-email button{
+    height: 54px;
+    border-radius: 8px;
+    margin-left: 10px;
+    width: 180px;
+    background-color: #e50914;
+    color: white;
+    font-size: 24px;
+    font-weight: 800px;
+}
+
+/* Section  */
+
+.section{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 72px;
+    padding-bottom: 72px;
+
+}
+.section-1{
+    height: 440px;
+    width: 1170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 170px;
+    margin-right: 170px;
+}
+.video-1{
+    width: 50%;
+}
+.video-1 img{
+    height: 320px;
+    background-size: cover;
+
 }
